coding with syjo

--- a/hello.html
+++ b/hello.html
@@ -9,12 +9,7 @@
 </head>
 <body>
     <div id="root">
-        <p>{{ message }}</p>
-        <ul>
-            <li v-for="user in users">
-                <p v-on:click="sayHi(user.name)">{{ user.name }}</p>
-            </li>
-        </ul>
+        <comm></comm>
     </div>
     <script src="./hello.js"></script>
 </body>
